Fixing some crucial bugs in 2.4.0 after all, saving us some time out on the forums
git-svn-id: svn://source.pentaho.org/svnkettleroot/mirror/Kettle/trunk@2483 5fb7f6ec-07c1-534a-b4ca-9155e429e800