@@ -59,7 +59,7 @@ public class Const
 	/**
 	 *  Version number
 	 */
-	public static final String VERSION = "2.4.1-dev";
+	public static final String VERSION = "2.4.0";
 
 	/**
 	 * Sleep time waiting when buffer is empty
@@ -1515,7 +1515,7 @@ public class Const
         for (int i=0;i<lookup.length;i++)
         {
             int idx = indexOfString(lookup[i], array);
-            if (idx>=0) indexesList.add(Integer.valueOf(idx));
+            if (idx>=0) indexesList.add(new Integer(idx));
         }
         int[] indexes = new int[indexesList.size()];
         for (int i=0;i<indexesList.size();i++) indexes[i] = ((Integer)indexesList.get(i)).intValue();
