@@ -455,7 +455,7 @@ public class EnterListDialog extends Dialog
 		wListDest.removeAll();
 		for (int i=0;i<input.length;i++)
 		{
-			Integer idx = Integer.valueOf(i);
+			Integer idx = new Integer(i);
 			String str = (String)selection.get(idx);
 			if (str==null) // Not selected: show in source!
 			{
@@ -481,7 +481,7 @@ public class EnterListDialog extends Dialog
 	public void addToDestination(String string)
 	{
 		int idxInput = Const.indexOfString(string, input);
-		selection.put(Integer.valueOf(idxInput), string);
+		selection.put(new Integer(idxInput), string);
 		
 		getData();
 	}
@@ -489,7 +489,7 @@ public class EnterListDialog extends Dialog
 	public void delFromDestination(String string)
 	{
 		int idxInput = Const.indexOfString(string, input);
-		selection.remove(Integer.valueOf(idxInput));
+		selection.remove(new Integer(idxInput));
 		
 		getData();
 	}
